[package]
name = "abst_helper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.1"
console_error_panic_hook = "0.1.6"
# TODO Hack
getrandom = { version = "0.2", features = ["js"] }
geojson = "0.24.0"
geom = { git = "https://github.com/a-b-street/abstreet" }
map_model = { git = "https://github.com/a-b-street/abstreet" }
serde = "1.0.152"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
# TODO Hack, abstio should declare this
web-sys = { version = "0.3.61", features=["Document"] }
