[package]
name = "route-snapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
console_error_panic_hook = "0.1.6"
geojson = "0.24.0"
geom = { git = "https://github.com/a-b-street/abstreet" }
petgraph = "0.6.0"
serde = "1.0.123"
serde_json = "1.0.61"
wasm-bindgen = "0.2.70"
# TODO Can trim this down I think
web-sys = { version = "0.3.47", features = ["Document"] }

