[package]
name = "route_info"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abstutil = { git = "https://github.com/a-b-street/abstreet" }
anyhow = "1.0.71"
bincode = "1.3.1"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
geojson = "0.24.0"
geom = { git = "https://github.com/a-b-street/abstreet" }
log = "0.4.17"
osm2streets = { git = "https://github.com/a-b-street/osm2streets" }
petgraph = "0.6.3"
serde = "1.0.163"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
web-sys = "0.3.62"
