[package]
name = "route-snapper-graph"
version = "0.1.0"
edition = "2021"

[features]
default = []
osm2streets = ["dep:osm2streets"]

[dependencies]
geom = { git = "https://github.com/a-b-street/abstreet" }
osm2streets = { git = "https://github.com/a-b-street/osm2streets", rev = "66494d34aaa78415957d605d97cda47ea203055e", optional = true }
serde = "1.0.123"
